Fix for sidebar which was too long

--- a/backend/app/assets/stylesheets/spree/backend/components/_admin_lte_overrides.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_admin_lte_overrides.scss
@@ -18,19 +18,6 @@ h6,
 .h6 {
   font-family: Arial, Helvetica, sans-serif;
 }
-.content {
-  background-color: white;
-  padding-top: 0;
-  &.with-sidebar {
-    padding-right: 170px;
-    .col-md-12 {
-      padding-right: 30px;
-    }
-  }
-  &.sidebar-collapsed {
-    padding-right: 45px;
-  }
-}
 
 ul.sidebar-menu li.treeview span.pull-right {
   font-size: 0.7em;
